--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
     <div class="container">
         <h1>Evolution of Anime Streaming Platforms</h1>
-        <p> <a href="https://zorotoanime.com/">Anime streaming</a> platforms have undergone a remarkable evolution, transforming from niche websites to mainstream services that cater to millions of fans worldwide. The journey of these platforms reflects not only technological advancements but also shifting consumer preferences and industry dynamics.</p>
+        <p> <a href="https://zorotoanime.com/">Zoro to</a> platforms have undergone a remarkable evolution, transforming from niche websites to mainstream services that cater to millions of fans worldwide. The journey of these platforms reflects not only technological advancements but also shifting consumer preferences and industry dynamics.</p>
 
         <h2>Early Days: Niche Websites and Fan Communities</h2>
         <p>In the early 2000s, anime fans relied on fan-subtitled content distributed through file-sharing networks and online forums. However, the quality and legality of these sources varied widely, and accessing anime content often required navigating through a maze of unofficial channels.</p>
